--- a/news.html
+++ b/news.html
@@ -57,27 +57,6 @@
                </div>
                <div class="span6 post">
                   <div class="text">
-                     <h5><a href="https://tech-talk.iitm.ac.in/hot-and-cold/">Hot and Cold</a></h5>
-                     <br/>
-                     <span class="date">January 21, 2025</span>
-                  </div>
-                  <div class="img">
-                     <a href="https://tech-talk.iitm.ac.in/hot-and-cold/">
-                     <img src="news/Hot-and-Cold-techtalk.jpg" alt="Hot and Cold - IITM Tech Talk">
-                     </a>
-                  </div>
-                  <div class="text">
-                     <p> Can the sun act as a cooling agent? Don’t be ridiculous! But that’s exactly what we have with solar-powered cold storage systems! </p>
-                  </div>
-                  <div class="author_box">
-                     <h6>Vijayakumar S.</h6>
-                  </div>
-               </div>
-            </div>
-
-            <div class="row-fluid post_row">
-               <div class="span6 post">
-                  <div class="text">
                      <h5><a href="https://tech-talk.iitm.ac.in/a-solar-multi-effect-desalination-success/">A Solar Multi-Effect Desalination Success!</a></h5>
                      <br/>
                      <span class="date">May 07, 2025</span>
@@ -94,9 +73,12 @@
                      <h6>Thilagan K.</h6>
                   </div>
                </div>
+            </div>
+
+            <div class="row-fluid post_row">
                <div class="span6 post">
                   <div class="text">
-                     <h5><a href="https://tech-talk.iitm.ac.in/hot-and-cold/">Hot and Cold</a></h5>
+                     <h5><a href="https://tech-talk.iitm.ac.in/hot-and-cold/">Hot and Cold - IITM Tech Talk</a></h5>
                      <br/>
                      <span class="date">January 21, 2025</span>
                   </div>
@@ -107,6 +89,24 @@
                   </div>
                   <div class="text">
                      <p> Can the sun act as a cooling agent? Don’t be ridiculous! But that’s exactly what we have with solar-powered cold storage systems! </p>
+                  </div>
+                  <div class="author_box">
+                     <h6>Vijayakumar S.</h6>
+                  </div>
+               </div>
+               <div class="span6 post">
+                  <div class="text">
+                     <h5><a href=" "> </a></h5>
+                     <br/>
+                     <span class="date"> </span>
+                  </div>
+                  <div class="img">
+                     <a href=" ">
+                     <img src=" " alt=" ">
+                     </a>
+                  </div>
+                  <div class="text">
+                     <p>   </p>
                   </div>
                   <div class="author_box">
                      <h6>Vijayakumar S.</h6>
