--- a/news.html
+++ b/news.html
@@ -39,20 +39,20 @@
             <div class="row-fluid post_row">
                <div class="span6 post">
                   <div class="text">
-                     <h5><a href="https://tech-talk.iitm.ac.in/a-solar-multi-effect-desalination-success/">A Solar Multi-Effect Desalination Success!</a></h5>
+                     <h5><a href="https://timesofindia.indiatimes.com/city/chennai/iit-ms-solar-powered-desal-unit-aims-at-10k-litres-of-potable-water-per-day/articleshow/121605041.cms">IIT-M'S solar-powered desal unit aims at 10K liters of potable water a day</a></h5>
                      <br/>
-                     <span class="date">May 07, 2025</span>
+                     <span class="date">June 05, 2025</span>
                   </div>
                   <div class="img">
-                     <a href="https://tech-talk.iitm.ac.in/a-solar-multi-effect-desalination-success/">
-                     <img src="news/solar-desalination-success.jpeg" alt="A Solar Multi-Effect Desalination Success!">
+                     <a href="https://timesofindia.indiatimes.com/city/chennai/iit-ms-solar-powered-desal-unit-aims-at-10k-litres-of-potable-water-per-day/articleshow/121605041.cms">
+                        <embed src="news/TOI_Chennai_04-06-2025.pdf" type="application/pdf" width="100%" height="600px" alt="IIT-M'S solar-powered desal unit aims at 10K liters of potable water a day">
                      </a>
                   </div>
                   <div class="text">
-                     <p> About 97% of Earth's water is seawater, but only a small fraction is potable. IIT Madras has developed an indigenous, solar-driven, energy-efficient seawater desalination system, leveraging India's abundant solar insolation to sustainably produce clean drinking water. </p>
+                     <p> Researchers at IIT Madras have developed a desalination system that uses sunlight and seawater to produce 10,000 liters of potable water a day. A compact version, which will soon be patented, was developed on the IIT-M campus after a pilot plant was set up at Kanyakumari, in collaboration with NIOT and support from MoES. </p>
                   </div>
                   <div class="author_box">
-                     <h6>Thilagan K.</h6>
+                     <h6>Thilagan K. [The Times of India aritcle]</h6>
                   </div>
                </div>
                <div class="span6 post">
@@ -109,7 +109,7 @@
                      <p>   </p>
                   </div>
                   <div class="author_box">
-                     <h6>Vijayakumar S.</h6>
+                     <h6> </h6>
                   </div>
                </div>
             </div>
