--- a/people.html
+++ b/people.html
@@ -45,7 +45,8 @@
                   <li><a href="#ms">M.S</a></li>
                   <li><a class="subhead" href="#Ongoing_ms"> Ongoing </a></li>
                   <li><a class="subhead" href="#Alumni_ms"> Alumni </a></li>
-                  <li><a href="#graduate">Graduate Students</a></li>
+                  <li><a href="#graduate">Graduate Students</a></li>    
+                  <li><a href="#graduate">Staff</a></li>
                </ul>
             </div>
             <div class="span8 offset1">
@@ -295,7 +296,29 @@
                   <hr>
                </section>
                <hr>
+
+
+               <section id="staff">
+                  <div class="page-header">
+                     <h3>Staff</h3>
+                  </div>
+                  <div class="row-fluid">
+                     <div class="span3">
+                        <img src="people/Antro Jagatheesh.M.png" alt="Antro Jagatheesh M"/>
+                        </a>
+                     </div>
+                     <div class="span9">
+                        <h4>Antro Jagatheesh M</h4>
+                        <p>ITI - Welding</p>
+                        <p><b>Post: </b>Senior Technician</p>
+                     </div>
+                  </div>
+                  <hr>
+               </section>
             </div>
+
+
+            
          </div>
       </div>
       <footer id="footer">
