--- a/people.html
+++ b/people.html
@@ -46,7 +46,7 @@
                   <li><a class="subhead" href="#Ongoing_ms"> Ongoing </a></li>
                   <li><a class="subhead" href="#Alumni_ms"> Alumni </a></li>
                   <li><a href="#graduate">Graduate Students</a></li>    
-                  <li><a href="#graduate">Staff</a></li>
+                  <li><a href="#Staff">Staff</a></li>
                </ul>
             </div>
             <div class="span8 offset1">
@@ -266,36 +266,7 @@
                      </div>
                   </div>
                   <hr>
-                  <div class="row-fluid">
-                     <div class="span3">
-                        <a href="https://unsplash.com/photos/LUdelQ2EO2g" class="thumbnail">
-                        <img src="thumbs/ronny-sison.jpg" alt="Ronny Simon"/>
-                        </a>
-                     </div>
-                     <div class="span9">
-                        <h4><a href="https://unsplash.com/photos/LUdelQ2EO2g">Ronny Simon</a></h4>
-                        <p>Ronny received his B.Tech in Electrical Engineering from the Lorem Ipsum Institute of Technology. His current research focuses on ullamcorper nibh ut orci eleifend varius elementum ut augue. Proin ornare, arcu et efficitur laoreet, purus ante dictum leo, vel pulvinar velit leo sed nunc. </p>
-                        <p><b>Email: </b><a href="mailto:ronny.email@uni.edu">ronny.email@uni.edu</a></p>
-                        <p><b>Address: </b>999 Fake Street Avenue, City, State Country ZIP</p>
-                     </div>
-                  </div>
-                  <hr>
-                  <div class="row-fluid">
-                     <div class="span3">
-                        <a href="https://unsplash.com/photos/nomivMNW07o" class="thumbnail">
-                        <img src="thumbs/graduate-1.jpg" alt="Jenny Lopez"/>
-                        </a>
-                     </div>
-                     <div class="span9">
-                        <h4><a href="https://unsplash.com/photos/nomivMNW07o">Jenny Lopez</a></h4>
-                        <p>Jenny received her B.S. degree in Mechanical Engineering from the Lorem Ipsum Technical University in 2012 with High Honors, where she focused on quis nisl vitae lectus pharetra dapibus. In sit amet erat purus. Proin finibus, nunc sed faucibus molestie, risus tellus sodales elit, nec luctus urna augue vitae dolor. Curabitur nisl eros, rhoncus eget mauris vitae.</p>
-                        <p><b>Email: </b><a href="mailto:jenny.email@uni.edu">jenny.email@uni.edu</a></p>
-                        <p><b>Address: </b>999 Fake Street Avenue, City, State Country ZIP</p>
-                     </div>
-                  </div>
-                  <hr>
                </section>
-               <hr>
 
 
                <section id="staff">
