--- a/people.html
+++ b/people.html
@@ -46,7 +46,7 @@
                   <li><a class="subhead" href="#Ongoing_ms"> Ongoing </a></li>
                   <li><a class="subhead" href="#Alumni_ms"> Alumni </a></li>
                   <li><a href="#graduate">Graduate Students</a></li>    
-                  <li><a href="#Staff">Staff</a></li>
+                  <li><a href="#staff">Staff</a></li>
                </ul>
             </div>
             <div class="span8 offset1">
