--- a/people.html
+++ b/people.html
@@ -158,8 +158,8 @@
                            <h4>Alumni</h4>
                         <div class="row-fluid">
                            <div class="span3">
-                           <a href="https://unsplash.com/photos/aCZ2hiC-iDk" class="thumbnail">
-                              <img src="people/thilagan.JPEG" alt="Thilagan K"/>
+                              <a href="thilagan/thilagan.html" class="thumbnail">
+                                 <img src="people/thilagan.JPEG" alt="Thilagan K"/>
                               </a>
                            </div>
                            <div class="span9">
