--- a/people.html
+++ b/people.html
@@ -158,7 +158,7 @@
                            <h4>Alumni</h4>
                         <div class="row-fluid">
                            <div class="span3">
-                              <a href="thilagan/thilagan.html">
+                              <a href="thilagan/thilagan.html" class="thumbnail" target="_blank">
                                  <img src="people/thilagan.JPEG" alt="Thilagan K"/>
                               </a>
                            </div>
