--- a/thilagan/thilagan.html
+++ b/thilagan/thilagan.html
@@ -16,7 +16,7 @@
 		
 		<!-- Title + Icon -->
 		<title>Nicolas Meseguer</title>
-		<link rel="icon" type="image/x-icon" href="assets/documents/imgs/NicolasMeseguer.ico">
+		<link rel="icon" type="image/x-icon" href="thilagan/assets/documents/imgs/NicolasMeseguer.ico">
 
 		<!-- Improve SEO -->
 		<meta name="robots" content="index,follow" />
@@ -26,13 +26,13 @@
 		<link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 		<link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
-		<link rel="stylesheet" href="assets/css/main.css">
+		<link rel="stylesheet" href="thilagan/assets/css/main.css">
 
 	</head>
 
 	<!-- Google tag (gtag.js) & Google Analytics -->
 	<script>
-        fetch('./assets/js/config.json')
+        fetch('.thilagan/assets/js/config.json')
             .then(response => response.json())
             .then(config => {
                 const scriptTag = document.createElement('script');
@@ -132,7 +132,7 @@
 				<div id="leftPanel" class="col-md-3 language">
 					<div class="row mb-3">
 						<div class="col">
-							<img src="assets/documents/imgs/NicolasMeseguer.webp" class="rounded me-auto d-block img-fluid profilepicture" alt="Nicolas Meseguer profile picture">
+							<img src="thilagan/assets/documents/imgs/NicolasMeseguer.webp" class="rounded me-auto d-block img-fluid profilepicture" alt="Nicolas Meseguer profile picture">
 						</div>
 					</div>
 
@@ -168,7 +168,7 @@
 						</div>
 
 						<div class="col-10">
-							<a href="assets/documents/NicolasMeseguerCV.pdf" class="link-dark" target="_blank" data-es="CV [Actualizado 03/2024]" data-en="CV [Updated 03/2024]"></a>
+							<a href="thilagan/assets/documents/NicolasMeseguerCV.pdf" class="link-dark" target="_blank" data-es="CV [Actualizado 03/2024]" data-en="CV [Updated 03/2024]"></a>
 						</div>
 					</div>
 
@@ -228,7 +228,7 @@
 						</div>
 
 						<div class="col-10">
-							<a href="https://fseneca.es/tfs/fpi/ficha/8362" class="link-dark" target="_blank"><img class="fseneca" src="/assets/documents/imgs/fseneca-color.svg" alt="Fundación Séneca"></a>
+							<a href="https://fseneca.es/tfs/fpi/ficha/8362" class="link-dark" target="_blank"><img class="fseneca" src="/thilagan/assets/documents/imgs/fseneca-color.svg" alt="Fundación Séneca"></a>
 						</div>
 					</div>
 				</div>
@@ -258,7 +258,7 @@
 
 								<li class="abme-honors-bullet">
 									<strong>🥉 Telefónica Hack4Good 2024</strong>, <span data-es="con una plataforma para telemedicina integral con varios actores" data-en="with a comprehensive telemedicine platform with several stakeholders"></span> 
-									[<a href="./assets/documents/HackForGood2024NicolasMeseguer.pdf" class="link-dark" target="_blank">1</a>]
+									[<a href="./thilagan/assets/documents/HackForGood2024NicolasMeseguer.pdf" class="link-dark" target="_blank">1</a>]
 									[<a href="https://www.ucam.edu/noticias/inteligencia-artificial-aplicada-salud-propuesta-ganadora-del-hackforgood-celebrado-ucam" class="link-dark" target="_blank">2</a>] 
 									- <span data-es="Mar, 2024" data-en="Mar, 2024"></span>
 								</li>
@@ -272,20 +272,20 @@
 
 								<li class="abme-honors-bullet mt-2">
 									<strong>🥈 Mercedes-Benz Talent Highway</strong>, <span data-es="con un modelo analítico de mercado predictivo" data-en="with a predictive analytical market model"></span> 
-									[<a href="./assets/documents/MercedesBenz2022NicolasMeseguer.pdf" class="link-dark" target="_blank">1</a>] 
-									[<a href="./assets/documents/imgs/honors_awards/NicolasMeseguerMercedes-Benz.jpg" class="link-dark" target="_blank">2</a>] 
+									[<a href="./thilagan/assets/documents/MercedesBenz2022NicolasMeseguer.pdf" class="link-dark" target="_blank">1</a>] 
+									[<a href="./thilagan/assets/documents/imgs/honors_awards/NicolasMeseguerMercedes-Benz.jpg" class="link-dark" target="_blank">2</a>] 
 									- Nov, 2022
 								</li>
 
 								<li class="abme-honors-bullet mt-2">
 									<strong><span data-es="Beca Universitaria" data-en="University scholarship"></span></strong> <span data-es="para el máster" data-en="for the master's degree"></span> (M.S.)
-									[<a href="./assets/documents/NicolasMeseguerScholarship.pdf" class="link-dark" target="_blank">1</a>] 
+									[<a href="./thilagan/assets/documents/NicolasMeseguerScholarship.pdf" class="link-dark" target="_blank">1</a>] 
 									- Nov, 2022
 								</li>
 
 								<li class="abme-honors-bullet mt-2">
 									<strong>🥇 Telefónica Hack4Good 2022</strong>, <span data-es="con una aplicación contra el desperdicio cero de alimentos" data-en="with an application against zero food waste"></span>
-									[<a href="./assets/documents/HackForGood2022NicolasMeseguer.pdf" class="link-dark" target="_blank">1</a>]
+									[<a href="./thilagan/assets/documents/HackForGood2022NicolasMeseguer.pdf" class="link-dark" target="_blank">1</a>]
 									[<a href="https://www.ucam.edu/noticias/investigacion-salud-deporte-protagonistas-actividades-ucam" class="link-dark" target="_blank">2</a>]
 									[<a href="https://www.linkedin.com/posts/universidad-catolica-san-antonio-de-murcia_secyt22-investigaciaejn-salud-activity-6989572524854382592-zMr4" class="link-dark" target="_blank">3</a>] 
 									- Oct, 2022
@@ -293,19 +293,19 @@
 
 								<li class="abme-honors-bullet mt-2">
 									<strong><span data-es="Premio Extraordinario" data-en="Extraordinary Award"></span></strong>, <span data-es="por el mejor Expediente Académico en Ingeniería Informática" data-en="for the Best Computer Engineering Academic Record"></span> (B.S.)
-									[<a href="./assets/documents/imgs/honors_awards/NicolasMeseguerAward.jpg" class="link-dark" target="_blank">1</a>] 
+									[<a href="./thilagan/assets/documents/imgs/honors_awards/NicolasMeseguerAward.jpg" class="link-dark" target="_blank">1</a>] 
 									- Jun, 2022
 								</li>
 
 								<li class="abme-honors-bullet mt-2">
 									<strong><span data-es="Beca de Iniciación a la Investigación" data-en="Research Initiation Scholarship"></span></strong> <span data-es="para jóvenes investigadores prometedores" data-en="for promising young researchers"></span>
-									[<a href="./assets/documents/NicolasMeseguerResearchGrant.pdf" class="link-dark" target="_blank">1</a>] 
+									[<a href="./thilagan/assets/documents/NicolasMeseguerResearchGrant.pdf" class="link-dark" target="_blank">1</a>] 
 									- Feb, 2021
 								</li>
 
 								<li class="abme-honors-bullet mt-2">
 									<strong><span data-es="Beca Erasmus+" data-en="Erasmus+ Scholarship"></span></strong>, <span data-es="para unas prácticas europeas" data-en="for a european internship"></span>
-									[<a href="./assets/documents/imgs/honors_awards/NicolasMeseguerGermany.png" class="link-dark" target="_blank">1</a>] 
+									[<a href="./thilagan/assets/documents/imgs/honors_awards/NicolasMeseguerGermany.png" class="link-dark" target="_blank">1</a>] 
 									- Mar, 2018
 								</li>
 							</ul>
@@ -315,7 +315,7 @@
 							<div class="container">
 								<div class="row mt-3">
 									<div class="thumbnail col-md-3">
-										<img class="rounded mx-auto d-block img-fluid" src="/assets/documents/imgs/hobbies/NicolasMeseguerProgramming.webp" alt="Programming and Math">
+										<img class="rounded mx-auto d-block img-fluid" src="/thilagan/assets/documents/imgs/hobbies/NicolasMeseguerProgramming.webp" alt="Programming and Math">
 									</div>
 									<div class="col-md-9" id="hobbie1">
 										<b 
@@ -336,7 +336,7 @@
 
 								<div class="row mt-5">
 									<div class="thumbnail col-md-3">
-										<img class="rounded mx-auto d-block img-fluid" src="/assets/documents/imgs/hobbies/NicolasMeseguerTailandia.webp" alt="Travelling">
+										<img class="rounded mx-auto d-block img-fluid" src="/thilagan/assets/documents/imgs/hobbies/NicolasMeseguerTailandia.webp" alt="Travelling">
 									</div>
 									<div class="col-md-9" id="hobbie2">
 										<b 
@@ -355,7 +355,7 @@
 								
 								<div class="row mt-5">
 									<div class="thumbnail col-md-3">
-										<img class="rounded mx-auto d-block img-fluid" src="/assets/documents/imgs/hobbies/NicolasMeseguerYouTube.webp" alt="Content Creator on YouTube">
+										<img class="rounded mx-auto d-block img-fluid" src="/thilagan/assets/documents/imgs/hobbies/NicolasMeseguerYouTube.webp" alt="Content Creator on YouTube">
 									</div>
 									<div class="col-md-9" id="hobbie3">
 										<b 
@@ -469,7 +469,7 @@
 									data-en="Thesis:">
 								</span>
 								<span class="trnsf-italic">
-									<a href="./assets/documents/dissertations/NICOLASMESEGUER_CPU-PCGCN_efficient_processing_of_graph_convolutional_networks_on_CPU_architectures.pdf" class="link-dark" target="_blank"
+									<a href="./thilagan/assets/documents/dissertations/NICOLASMESEGUER_CPU-PCGCN_efficient_processing_of_graph_convolutional_networks_on_CPU_architectures.pdf" class="link-dark" target="_blank"
 									data-es="CPU-PCGCN, procesamiento eficiente de redes convolucionales grafos en arquitecturas CPU."
 									data-en="CPU-PCGCN, efficient processing of graph convolutional networks on CPU architectures.">
 								</a>
@@ -560,7 +560,7 @@
 									data-en="Thesis:">
 								</span>
 								<span class="trnsf-italic">
-									<a href="./assets/documents/dissertations/NICOLASMESEGUER_Implementation_and_evaluation_of_the_DLRM_model_in_an_ASIC_accelerator_simulated_by_STONNE.pdf" class="link-dark" target="_blank"
+									<a href="./thilagan/assets/documents/dissertations/NICOLASMESEGUER_Implementation_and_evaluation_of_the_DLRM_model_in_an_ASIC_accelerator_simulated_by_STONNE.pdf" class="link-dark" target="_blank"
 									data-es="Implementación y evaluación del modelo DLRM en un acelerador ASIC simulado por STONNE"
 									data-en="Implementation and evaluation of the DLRM model in an ASIC accelerator simulated by STONNE.">
 								</a>
@@ -612,7 +612,7 @@
 								<div class="pub-congress">19th International Summer School on Advanced Computer Architecture and Compilation for High-performance Embedded Systems, Fiuggi (Italy), July 2023.</div>
 								<!-- Links -->
 								<div class="mt-1">
-									<span> <i class="far fa-file-pdf"></i> <a href="/assets/documents/publications/2023CPU-PCGCN-Poster.pdf" target="_blank" class="link-dark ">Poster</a> </span>
+									<span> <i class="far fa-file-pdf"></i> <a href="/thilagan/assets/documents/publications/2023CPU-PCGCN-Poster.pdf" target="_blank" class="link-dark ">Poster</a> </span>
 									<span class="pub-force-margin-left"> <i class="far fa-file-pdf"></i> <a href="/assets/documents/publications/2023CPU-PCGCN-Abstract.pdf" target="_blank" class="link-dark ">Abstract</a> </span>
 									<!-- This <a> with id citation, will automatically copy to the clipboard the bibtex citation -->
 									<span class="pub-force-margin-left"> <i class="fas fa-quote-left"></i> <a href="#" id="citation" class="link-dark">BibTeX</a> </span>
@@ -640,7 +640,7 @@
 								<div class="pub-authors mt-1"><span class="pub-author">Nicolás Meseguer-Iborra</span>, Francisco Muñoz-Martínez, José L. Abellán, Manuel E. Acacio</div>
 								<div class="pub-congress">XXXII Jornadas de Paralelismo, Alicante (Spain), September 2022.</div>
 								<div class="mt-1">
-									<span> <i class="far fa-file-pdf"></i> <a href="/assets/documents/publications/2022CPU-PCGCN.pdf" target="_blank" class="link-dark ">PDF</a> </span>
+									<span> <i class="far fa-file-pdf"></i> <a href="/thilagan/assets/documents/publications/2022CPU-PCGCN.pdf" target="_blank" class="link-dark ">PDF</a> </span>
 									<span class="pub-force-margin-left"> <i class="fas fa-quote-left"></i> <a href="#" id="citation" class="link-dark">BibTeX</a> </span>
 								</div>
 								<div class="d-none">
@@ -665,7 +665,7 @@
 								<div class="pub-authors mt-1"><span class="pub-author">Nicolás Meseguer-Iborra</span>, Francisco Muñoz-Martínez, Manuel E. Acacio, José L. Abellán</div>
 								<div class="pub-congress">XXXI Jornadas de Paralelismo, Málaga (Spain), September 2021.</div>
 								<div class="mt-1">
-									<span> <i class="far fa-file-pdf"></i> <a href="/assets/documents/publications/2021DLRM.pdf" target="_blank" class="link-dark">PDF</a> </span>
+									<span> <i class="far fa-file-pdf"></i> <a href="/thilagan/assets/documents/publications/2021DLRM.pdf" target="_blank" class="link-dark">PDF</a> </span>
 									<span class="pub-force-margin-left"> <i class="fas fa-quote-left"></i> <a href="#" id="citation" class="link-dark">BibTeX</a> </span>
 								</div>
 								<div class="d-none">
@@ -892,8 +892,8 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-		<script src="assets/js/languageManager.js"></script>
-		<script src="assets/js/main.js"></script>
+		<script src="thilagan/assets/js/languageManager.js"></script>
+		<script src="thilagan/assets/js/main.js"></script>
 	</body>
 
 </html>
