--- a/people.html
+++ b/people.html
@@ -163,7 +163,7 @@
                               </a>
                            </div>
                            <div class="span9">
-                              <h4><a href="thilagan/thilagan.html" class="thumbnail" target="_blank"> </a> Dr. Thilagan K</h4>
+                              <h4><a href="thilagan/thilagan.html" target="_blank"> Dr. Thilagan K </a></h4>
                               <p>Ph.D. in Mechanical Engineering, <br/>Indian Institute of Technology Madras (IIT-M) Chennai, 2025<br/>M.S. (By Research) in Mechanical Engineering, <br/>College of Engineering Guindy, Anna University, Chennai, 2017<br/> B.E in Mechanical Engineering, <br/>Sri Venkateswara College of Engineering, Sriperumbudur, 2014</p>
                               <p><b>Office Phone: </b>4670 </p>
                               <p><b>Email: </b><a href="mailto:your.email@uni.edu">me17d045@smail.iitm.ac.in</a></p>
