--- a/thilagan/thilagan.html
+++ b/thilagan/thilagan.html
@@ -95,7 +95,7 @@
     <!-- Header -->
     <header class="header-bg h-screen flex items-center justify-center text-white relative">
         <div class="text-center z-10">
-            <img src="people/thilagan.JPEG" alt="Dr. Thilagan K." class="rounded-full w-32 h-32 mx-auto mb-4 border-4 border-blue-300/">
+            <img src="people/thilagan.JPEG" alt="Dr. Thilagan K." class="rounded-full w-32 h-32 mx-auto mb-4 border-4 border-blue-300">
             <h1 class="text-5xl font-bold mb-2">Dr. Thilagan K.</h1>
             <p class="text-xl">Researcher in Solar Energy and Desalination</p>
             <div class="mt-4 flex justify-center space-x-4">
