--- a/thilagan/thilagan.html
+++ b/thilagan/thilagan.html
@@ -97,7 +97,7 @@
         <div class="text-center z-10">
             <img src="people/thilagan.JPEG" alt="Dr. Thilagan K." class="rounded-full w-32 h-32 mx-auto mb-4 border-4 border-blue-300">
             <h1 class="text-5xl font-bold mb-2">Dr. Thilagan K.</h1>
-            <p class="text-xl">Researcher in Solar Energy and Desalination</p>
+            <p class="text-xl">Area of Researcher : Desalination, Compact desalination, Solar Energy, Food drying</p>
             <div class="mt-4 flex justify-center space-x-4">
                 <a href="mailto:kthilagan177@gmail.com">Email</a>
                 <a href="https://scholar.google.com/citations?user=5lldYecAAAAJ" target="_blank">Google Scholar</a>
