--- a/thilagan/thilagan.html
+++ b/thilagan/thilagan.html
@@ -149,29 +149,28 @@
         </section>
 
         <!-- Employment -->
-        <section id="employment" class="tab-content">
-            <h2 class="text-3xl font-bold mb-6 text-blue-600">Employment History</h2>
-            <div class="employment mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">Senior Project Scientist</h3>
-                <p>Department of Mechanical Engineering, IIT Madras | Mar 2025 - Apr 2025</p>
+    <section id="education" class="py-16">
+        <div class="container mx-auto px-6">
+            <h2 class="text-3xl font-bold section-title" data-aos="fade-right">Education</h2>
+            <div class="space-y-6">
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up">
+                    <h3 class="text-xl font-semibold">Ph.D., Indian Institute of Technology Madras</h3>
+                    <p class="text-gray-600">2018 - 2025</p>
+                    <p>Thesis: Experimental Investigation on Solar-Driven Multi-Effect Compact Sea Water Desalination System</p>
+                </div>
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up" data-aos-delay="100">
+                    <h3 class="text-xl font-semibold">M.S. (By Research), Anna University</h3>
+                    <p class="text-gray-600">2014 - 2017</p>
+                    <p>Thesis: Studies on Drying of Leafy Vegetables Using Modified Solar Evacuated Tube Collectors</p>
+                </div>
+                <div class="card bg-white p-6 rounded-lg shadow-lg" data-aos="fade-up" data-aos-delay="200">
+                    <h3 class="text-xl font-semibold">B.E., Sri Venkateswara College of Engineering</h3>
+                    <p class="text-gray-600">2010 - 2014</p>
+                    <p>Branch: Mechanical Engineering</p>
+                </div>
             </div>
-            <div class="employment mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">Project Officer</h3>
-                <p>Department of Mechanical Engineering, IIT Madras | Apr 2023 - Dec 2024</p>
-            </div>
-            <div class="employment mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">Project Officer</h3>
-                <p>Department of Mechanical Engineering, IIT Madras | Nov 2017 - Mar 2020</p>
-            </div>
-            <div class="employment mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">Project Associate</h3>
-                <p>Department of Mechanical Engineering, IIT Madras | Aug 2017 - Oct 2017</p>
-            </div>
-            <div class="employment mb-6 bg-white p-4 rounded-lg shadow">
-                <h3 class="text-xl font-semibold">Project Associate</h3>
-                <p>Department of Mechanical Engineering, IIT Madras | Sep 2016 - Apr 2017</p>
-            </div>
-        </section>
+        </div>
+    </section>
 
         <!-- Publications -->
         <section id="publications" class="tab-content">
